# examples-python

./: .gitignore  CONTRIBUTING.md  README.md  copilot.sh  copilot.txt  pyproject.toml  readme.md
.githooks/: pre-push
agent_chat/: Dockerfile  README.md  event_agent.py  event_workflow.py  pyproject.toml  requirements.txt  schedule_agent.py  schedule_workflow.py
agent_chat/src/: services.py
agent_chat/src/agents/: agent.py
agent_chat/src/functions/: llm_chat.py
agent_chat/src/workflows/: workflow.py
agent_stream/: README.md  event_agent.py  pyproject.toml  requirements.txt  schedule_agent.py
agent_stream/src/: services.py
agent_stream/src/agents/: agent.py
agent_stream/src/functions/: llm_chat.py
agent_stream/src/workflows/: workflow.py
agent_todo/: README.md  pyproject.toml  requirements.txt  schedule.py
agent_todo/src/: services.py
agent_todo/src/agents/: agent_todo.py
agent_todo/src/functions/: get_random.py  get_result.py  llm_chat.py  random.py  result.py  todo_create.py
agent_todo/src/workflows/: todo_execute.py
agent_tool/: .env.Example  Dockerfile  README.md  pyproject.toml  requirements.txt
agent_tool/src/: services.py
agent_tool/src/agents/: chat.py  chat_child_workflow.py  chat_tool_functions.py
agent_tool/src/functions/: function.py  llm_chat.py  lookup_sales.py  new_function.py
agent_tool/src/workflows/: workflow.py
audio_transcript/: Dockerfile  README.md  pyproject.toml  requirements.txt  schedule_workflow.py
audio_transcript/src/: services.py
audio_transcript/src/functions/: transcribe_audio.py  translate_text.py
audio_transcript/src/workflows/: transcribe_translate.py
chatbot/: pyproject.toml  schedule_workflow.py
chatbot/src/: services.py
chatbot/src/functions/: get_workflow_memory.py  openai_chat_completion.py
chatbot/src/workflows/: chat_interaction.py  chat_session.py  chatbot.py
community/bostondynamics_spot/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
community/bostondynamics_spot/src/: services.py  spot_services.py
community/custom_llm_gemini/: .gitignore  README.md  pyproject.toml  requirements.txt
community/custom_llm_gemini/src/: llm.py
community/defense_quickstart_audio_transcription_translation/: README.md  frontend.py  pyproject.toml  requirements.txt
community/defense_quickstart_audio_transcription_translation/src/: app.py  services.py
community/defense_quickstart_denoise/: README.md  frontend.py  pyproject.toml  requirements.txt
community/defense_quickstart_denoise/src/: app.py  services.py
community/defense_quickstart_news_scraper_summarizer/: README.md  frontend.py  pyproject.toml  requirements.txt
community/defense_quickstart_news_scraper_summarizer/src/: app.py  client.py  services.py
community/e2b/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
community/e2b/src/: services.py
community/elevenlabs/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py  schedule_workflow_audio_isolation.py
community/elevenlabs/src/: client.py  services.py
defense_quickstart_audio_transcription_translation/: .env.example  README.md  pyproject.toml  restack_up.py
defense_quickstart_audio_transcription_translation/src/functions/: transcribe.py  translate.py
defense_quickstart_denoise/: Dockerfile  README.md  pyproject.toml  restack_up.py
defense_quickstart_news_scraper_summarizer/: .env.example  Dockerfile  README.md  pyproject.toml  restack_up.py
email_sender/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py  schedule_workflow_failure.py
email_sender/src/: services.py
email_sender/src/functions/: generate_email_content.py  send_email.py
email_sender/src/workflows/: send_email.py
encryption/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
encryption/src/: client.py  codec.py  codec_server.py  services.py
encryption/src/functions/: function.py
encryption/src/workflows/: workflow.py
flask_gemini/: README.md  pyproject.toml
gemini_generate/: README.md  pyproject.toml
gemini_generate/src/: services.py
gemini_generate/src/functions/: function.py
gemini_generate/src/workflows/: gemini_generate_content.py
openai_greet/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
openai_greet/src/: services.py
openai_greet/src/functions/: function.py
openai_greet/src/workflows/: openai_greet.py
pdf_ocr/: Dockerfile  README.md  pyproject.toml  requirements.txt
pdf_ocr/src/: services.py
pdf_ocr/src/functions/: openai_chat.py  torch_ocr.py
pdf_ocr/src/workflows/: files.py  pdf.py
pdf_pydantic/: .env.Example  README.md  pyproject.toml
pdf_pydantic/src/: client.py  main.py  services.py
pdf_pydantic/src/functions/: another.py  ocr.py  openai_chat.py  torch_ocr.py
pdf_pydantic/src/workflows/: files.py  pdf.py  workflow.py
production_demo/: Dockerfile  README.md  pyproject.toml  requirements.txt  restack_up.py  schedule_interval.py  schedule_scale.py  schedule_workflow.py
production_demo/src/: services.py
production_demo/src/functions/: evaluate.py  function.py  generate.py  openai.py
production_demo/src/workflows/: child.py  workflow.py
quickstart/: Dockerfile  README.md  pyproject.toml  requirements.txt  schedule_calendar.py  schedule_interval.py  schedule_workflow.py
quickstart/src/: client.py  services.py
quickstart/src/agents/: agent_todo.py
quickstart/src/functions/: function.py  llm_chat.py  random.py  result.py  todo_create.py
quickstart/src/quickstart.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
quickstart/src/workflows/: todo_execute.py  workflow.py
re_act/: README.md  pyproject.toml  requirements.txt  schedule_workflow.py
re_act/src/: services.py
re_act/src/functions/: decide.py  generate_email_content.py  send_email.py
re_act/src/workflows/: child_workflow_a.py  child_workflow_b.py  parent_workflow.py
smtp_send_email/: README.md  pyproject.toml  schedule_workflow.py
smtp_send_email/src/: client.py
streamlit/: pyproject.toml  readme.md
stripe_ai/: pyproject.toml
(+545 files in other folders)
