[project]
name = "agent_chat"
version = "0.0.1"
description = "An agent chat for Restack"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "watchfiles>=1.0.0,<2",
    "pydantic>=2.10.4,<3",
    "restack-ai>=0.0.53,<0.0.54",
    "openai>=1.60.2,<2",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
event = "event_workflow:run_event_workflow"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
