# Project metadata
[tool.poetry]
name = "agent_stream"
version = "0.0.1"
description = "An agent with streaming for Restack"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
watchfiles = "^1.0.0"
pydantic = "^2.10.4"

# Build system configuration
openai = "^1.60.2"
restack-ai = "^0.0.57"
websockets = "^14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# CLI command configuration
[tool.poetry.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
event = "event_workflow:run_event_workflow"