[tool.poetry]
name = "defense-quickstart-denoise"
version = "0.0.1"
description = "Remove noise from audio recordings with this example repository"
authors = ["Restack Team <service@restack.io>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "0.115.4"
uvicorn = "0.32.0"
python-dotenv = "1.0.1"
streamlit = "1.40.0"
requests = "2.32.3"
sievedata = "1.3.0"
restack-ai = "^0.0.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
app = "src.app:run_app"