[project]
name = "email_sender"
version = "0.0.1"
description = "Send emails with sendgrid"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "pydantic>=2.10.3,<3",
    "python-dotenv==1.0.1",
    "sendgrid==6.11.0",
    "openai>=1.57.2,<2",
    "restack-ai>=0.0.55,<0.0.56",
]

[project.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
schedule_failure = "schedule_workflow_failure:run_schedule_workflow_failure"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
