[tool.poetry]
name = "flask_gemini"
version = "0.0.1"
description = "A simple example to generate content using Google Gemini"
authors = [
    "Restack Team <service@restack.io>",
]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = { version = "3.0.3", extras = ["async"] }
flask-cors = "5.0.0"
google-generativeai = "0.8.3"
restack-ai = "^0.0.48"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"
flask = "src.app:run_flask"
