[project]
name = "openai_greet"
version = "0.0.1"
description = "A simple example to greet a person using OpenAI"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "openai>=1.57.2,<2",
    "python-dotenv==1.0.1",
    "restack-ai>=0.0.55,<0.0.56",
    "watchfiles>=1.0.0,<2",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
schedule = "schedule_workflow:run_schedule_workflow"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
