[project]
name = "production_demo"
version = "0.0.1"
description = "A simple example to get started with the restack-ai SDK"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "restack-ai>=0.0.52,<0.0.53",
    "watchfiles>=1.0.0,<2",
    "openai>=1.57.2,<2",
    "pydantic>=2.10.5,<3",
]

[project.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
workflow = "schedule_workflow:run_schedule_workflow"
interval = "schedule_interval:run_schedule_interval"
scale = "schedule_scale:run_schedule_scale"

[dependency-groups]
dev = ["pytest==6.2"]
