[tool.poetry]
name = "smtp_send_email"
version = "0.0.1"
description = "Example workflow and function for sending an email using SMTP"
authors = [
    "CyberAstronaut <42648291+CyberAstronaut101@users.noreply.github.com>",
]
readme = "README.md"
packages = [{include = "src", format = ["sdist"]}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
watchfiles = "^1.0.0"
pydantic = "^2.10.5"
python-dotenv = "1.0.1"
restack-ai = "^0.0.52"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "src.services:watch_services"
services = "src.services:run_services"
