[tool.poetry]
name = "restack-streamlit"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
restack-ai = "0.0.40"
streamlit = "1.39.0"
blinker = "1.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
