[project]
name = "defense-quickstart-denoise"
version = "0.0.1"
description = "Remove noise from audio recordings with this example repository"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "python-dotenv==1.0.1",
    "streamlit==1.40.0",
    "requests==2.32.3",
    "sievedata==1.3.0",
    "restack-ai>=0.0.48,<0.0.49",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"
