[project]
name = "defense_quickstart_news_scraper_summarizer"
version = "0.0.1"
description = "Scrape Ukrainian news articles, translate them to English, and summarize key points in just a few steps with this example repository"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "fastapi==0.115.4",
    "uvicorn==0.32.0",
    "python-dotenv==1.0.1",
    "streamlit==1.40.0",
    "requests==2.32.3",
    "openai>=1.57.2,<2",
    "bs4==0.0.2",
    "pydantic>=2.10.3,<3",
    "restack-ai>=0.0.55,<0.0.56",
]

[project.scripts]
services = "src.services:run_services"
app = "src.app:run_app"

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
